<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layoutDeleteContainer"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="@dimen/_10sdp"
    android:padding="@dimen/_8sdp"
    android:background="@drawable/background_dialog">

    <ImageView
        android:id="@+id/imageDeleteNote"
        android:layout_width="@dimen/_25sdp"
        android:layout_height="@dimen/_25sdp"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:src="@drawable/ic_delete"
        app:tint="@color/colorWhite"
        android:contentDescription="@string/delete_note"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:fontFamily="@font/ubuntu_bold"
        android:includeFontPadding="false"
        android:textSize="@dimen/_14ssp"
        android:textColor="@color/colorWhite"
        android:text="@string/delete_note"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/imageDeleteNote"
        app:layout_constraintTop_toTopOf="@id/imageDeleteNote"
        app:layout_constraintBottom_toBottomOf="@id/imageDeleteNote"/>

    <TextView
        android:id="@+id/textDeleteAlertNote"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_35sdp"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:fontFamily="@font/ubuntu_regular"
        android:includeFontPadding="false"
        android:paddingStart="@dimen/_8sdp"
        android:text="@string/are_you_sure_you_want_to_delete_this_note"
        android:paddingEnd="@dimen/_8sdp"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/_13ssp"
        app:layout_constraintTop_toBottomOf="@id/imageDeleteNote"/>

    <TextView
        android:id="@+id/textDelete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_8sdp"
        android:layout_marginBottom="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:fontFamily="@font/ubuntu_medium"
        android:includeFontPadding="false"
        android:padding="@dimen/_8sdp"
        android:textColor="@color/colorDelete"
        android:textSize="@dimen/_13ssp"
        android:text="@string/delete_note_caps"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textDeleteAlertNote"/>

    <TextView
        android:id="@+id/textCancelInDeleteDialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_8sdp"
        android:layout_marginBottom="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:fontFamily="@font/ubuntu_medium"
        android:includeFontPadding="false"
        android:padding="@dimen/_8sdp"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/_13ssp"
        android:text="@string/cancel"
        app:layout_constraintEnd_toStartOf="@id/textDelete"
        app:layout_constraintTop_toBottomOf="@id/textDeleteAlertNote"/>

</androidx.constraintlayout.widget.ConstraintLayout>